syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "pkg/protocol/core/kv/kvs.proto";

package pbrkv;

option go_package = "bscp.io/pkg/protocol/core/released-kv;pbrkv";

// ReleasedKv source resource reference: pkg/dal/table/released_kv.go
message ReleasedKv {
  uint32 id = 1;
  uint32 release_id = 2;
  pbkv.KvSpec spec = 3;
  pbkv.KvAttachment attachment = 4;
  pbbase.Revision revision = 5;
}
